--- a/package.json
+++ b/package.json
@@ -49,8 +49,7 @@
     "babel-plugin-module-resolver": "^5.0.0",
     "customize-cra": "^1.0.0",
     "react-app-rewired": "^2.2.1",
-    "sass": "^1.58.1"
+    "sass": "^1.58.1",
+    "tailwindcss": "^3.3.1"
   }
 }
-
-
